# esercizi

./: esercitazione-2.ipynb  esercizi.ipynb  oop.ipynb  openAi-intro.ipynb
esercitazione-openAI/esercitazione_OpenAI/: pyproject.toml
esercitazione-openAI/esercitazione_OpenAI/ollama/: 01.app.py  02.app.py  03.app.py  04.app.py  05.app.py
esercitazione-openAI/esercitazione_OpenAI/src/esercitazione_openai/: ex_1_OpenAI_API.ipynb  ex_2_OpenAI_API.ipynb  ex_3_OpenAI_API.ipynb  ex_4_OpenAI_API.ipynb  ex_5_OpenAI_API.ipynb
esercitazione-openAI/esercitazione_OpenAI/vectorDB/: esercitazione2_rag.py  esercitazione_rag.py  rag.ipynb  vectorDB.ipynb
esercitazione-openAI/esercitazione_OpenAI/vectorDB/ricette/: carbonara.txt  insalata.txt  lasagna.txt  pollo_senza_glutine.txt
