[project]
name = "esercitazione-openai"
version = "0.1.0"
description = ""
authors = [
    {name = "Felice Favia",email = "felicefavia56@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.2,<2.0.0)",
    "openai (>=2.30.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "esercitazione_openai", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
